update how to integrate current workflow

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "releaselens-sandbox",
   "version": "1.0.0",
-  "main": "src/app.js",
+  "main": "dist/jira/index.js",
   "scripts": {
     "test": "echo 'Error: no test specified' && exit 1",
     "build": "tsc",
